# msigd-gui

./: .gitignore  CLAUDE.md  EGUI_VS_ICED.md  GUI_OPTIONS.md  LICENSE  README.md  index.html  install.sh  io.github.aydiler.msigd-gui.desktop  io.github.aydiler.msigd-gui.metainfo.xml  msigd-gui.desktop  msigd-gui.sh  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  uninstall.sh  vite.config.ts  wdio.conf.ts
.github/workflows/: aur.yml  release.yml  snap.yml
aur/: PKGBUILD  PKGBUILD-bin
docs/: E2E_TESTING_PLAN.md  FLATHUB_SUBMISSION.md  FRONTEND_TESTING_TOOLS.md
documentation/: TAURI_IMPLEMENTATION_PLAN.md
documentation/.obsidian/: workspace.json
flatpak/: com.msigd.gui.yml  io.github.aydiler.msigd-gui.yml
snap/: snapcraft.yaml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  monitor.rs
src-tauri/src/msigd/: executor.rs  mod.rs  parser.rs  types.rs
src/lib/: types.ts
src/lib/api/: monitor.ts  store.ts
src/lib/components/: Select.svelte  Slider.svelte  Toggle.svelte
src/lib/state/: monitors.svelte.ts  ui.svelte.ts
src/lib/views/: AdvancedView.svelte  ColorView.svelte  DisplayView.svelte  InputView.svelte  LEDView.svelte  (+2 more)
tests/: tsconfig.json
tests/e2e/: app.spec.ts  interactive.spec.ts
tests/hardware/: README.md  run-tests.sh
tests/playwright/: advanced.spec.ts  app.spec.ts  color.spec.ts  display.spec.ts  fixtures.ts  led.spec.ts
